tests/functional/lang/eval-fail-coerce-integers-without-xp.err.exp
error:
       … while evaluating a path segment
         at /pwd/eval-fail-coerce-integers-without-xp.nix:1:2:
            1| "${42}" == 42
             |  ^
            2|

       error: cannot coerce an integer to a string: 42
